<resources>
    <string name="app_name">Journal</string>
    <string name="action_settings">设置</string>
    <string name="username">用户名</string>
    <string name="password">密 码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功!!</string>
    <string name="login_success">登录成功!!!</string>
    <string name="ok">确认</string>
    <string name="goLogin">去登陆</string>
    <string name="upload_avatar">上传头像</string>
    <string name="please_upload_avatar">请上传头像!</string>
    <string name="go_login">去登陆</string>
    <string name="goRegister">去注册</string>
    <string name="userIsExist">用户已存在!</string>
    <string name="error">发生错误!</string>
    <string name="passwordError">密码错误!</string>
    <string name="usernameEmpty">用户名为空!</string>
    <string name="passwordEmpty">密码为空!</string>
    <string name="settings">设置</string>
    <string name="please_input">请输入…</string>
    <string name="save">保存</string>
    <string name="noteEmpty">笔记内容为空!!</string>
    <string name="delete">删除</string>
    <string name="edit">修改</string>
    <string name="deleteSuccess">删除成功!</string>
    <string name="update">更新</string>
    <string name="update_success">更新成功！</string>
    <string name="create_success">创建成功!</string>
    <string name="create">创建</string>
    <string name="saveError">保存失败!</string>
    <string name="readFileError">读取文件错误!!!</string>
    <string name="jsonDecodeError">JSON转换失败</string>
    <string name="valueCheckError">数据验证失败!</string>
    <string name="testText">测试文字</string>
    <string name="card_time_test">10:00 am - 5:30 pm</string>
    <string name="card_desc_test">Gala Music Festival</string>
    <string name="title">标题</string>
    <string name="edit_time_test">7月12日 20.07</string>
    <string name="edit_text_count_text">101字</string>
    <string name="start_edit_tip">开始书写</string>
    <string name="webdav_account">webdav账号</string>
    <string name="webdav_password">webdav密码</string>
    <string name="webdav_config">配置webdav</string>
    <string name="webdavUsernameEmpty">WebDav账号为空!!!</string>
    <string name="webdavPasswordEmpty">WebDav密码为空!!!</string>
    <string name="saveOk">保存成功!</string>
    <string name="action_webdav_settings">webdav设置</string>
    <string name="webdavAuthError">认证失败!!！</string>
    <string name="webdavAuthSuccess">认证成功!!!</string>
    <string name="webdavFolderEmptyError">认证失败，文件夹不存在!!!</string>
    <string name="webdav_reply">备份历史</string>
    <string name="action_webdav_reply">恢复历史</string>
    <string name="replyHistory">要恢复历史记录吗?</string>
</resources>