<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:context=".activity.EditJournalActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        style="?appBarLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/toolbarColor"
        android:elevation="0dp"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbarColor"
            android:minHeight="?attr/actionBarSize"
            app:liftOnScroll="true"
            app:menu="@menu/edit_menu"
            app:navigationIcon="@drawable/baseline_arrow_back_24" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/journal_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/fab_margin">

            <com.google.android.material.card.MaterialCardView
                style="@style/MyCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@null"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="23sp" />

            </com.google.android.material.card.MaterialCardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_time_test"
                    android:textColor="#A4A4A4" />

                <FrameLayout
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/divider_margin"
                    android:paddingVertical="3dp">

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical" />

                </FrameLayout>

                <TextView
                    android:id="@+id/textCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_text_count_text"
                    android:textColor="#A4A4A4" />

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                style="@style/MyCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="6dp">

                <com.yuri.journal.components.JournalEditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/start_edit_tip"
                    android:padding="10dp"
                    android:textSize="@dimen/content_size" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>